--- a/styles.css
+++ b/styles.css
@@ -15,32 +15,103 @@ body {
   grid-column: 2/3;
   display: grid;
   grid-template-rows: 1fr 1fr;
+  box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 
 #search {
-  background-color: gray;
+  background-color: white;
   display: grid;
   grid-template-columns: 3fr 1fr;
   padding: 2rem;
   gap: 50px;
 }
 
+#search svg {
+  height: 2rem;
+  width: 2rem;
+  fill: black;
+}
+
 #leftSearch {
-  display: grid;
-  grid-template-columns: 1fr 10fr;
-  gap: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+#leftSearch > * {
+  flex-grow: 1;
 }
 
 input {
+  height: 2rem;
+  border-radius: 4rem;
+  border: none;
+  background-color: #e5e7eb;
 }
 
 #rightSearch {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  gap: 25px;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+svg#profilePic {
+  height: 3rem;
+  width: 3rem;
 }
 
 #profile {
-  background-color: green;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 2.5rem;
+}
+
+#profile > * {
+  flex-grow: 1;
+}
+
+#leftProfile {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 25px;
+}
+
+div.greeting {
+  display: grid;
+  gap: 5px;
+}
+
+#hi {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
+#name {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+#rightProfile {
+  display: grid;
+  grid-template-columns: minmax(80px, 1fr) minmax(80px, 1fr) minmax(80px, 1fr);
+  gap: 20px;
+  grid-template-rows: 50px;
+  align-content: center;
+  margin-right: 2rem;
+}
+
+button.blue {
+  background-color: #0ea5e9;
+  border: none;
+  border-radius: 4rem;
+  color: white;
+  font-weight: 600;
+  font-size: 1rem;
 }
 
 #sidebar {
