--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  height: 100vh;
+  max-height: 100vh;
   display: grid;
   margin: 0;
   grid-template-columns: 1fr 4fr;
@@ -22,8 +22,10 @@ body {
   background-color: white;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  padding: 2rem;
+  padding: rem;
   gap: 50px;
+  margin-left: 2rem;
+  margin-right: 2.5rem;
 }
 
 #search svg {
@@ -115,6 +117,10 @@ button.blue {
   font-size: 1rem;
 }
 
+button:hover {
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.295);
+}
+
 #sidebar {
   background-color: #0ea5e9;
   grid-row: 1/-1;
@@ -165,7 +171,7 @@ div.pages svg {
   position: relative;
   z-index: -1;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 4fr 1fr;
   grid-template-rows: 1fr 1fr;
 }
 
@@ -216,9 +222,59 @@ div.cardInfo p {
 }
 
 #announcements {
-  background-color: yellow;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  padding: 1.5rem;
+  gap: 10px;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
-#trending {
-  background-color: green;
+.announcementCard {
+  background-color: white;
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.15);
+}
+
+.underline {
+  border-bottom: solid 1px rgba(0, 0, 0, 0.15);
+}
+
+#noBorder {
+  border: none;
+}
+
+.underline h1 {
+  font-size: 0.8rem;
+}
+
+.underline p {
+  font-size: 0.65rem;
+  color: rgba(0, 0, 0, 0.63);
+}
+
+#profCard {
+  display: grid;
+  gap: 30px;
+}
+
+.prof h1 {
+  font-size: 0.8rem;
+}
+
+.prof p {
+  font-size: 0.65rem;
+  color: rgba(0, 0, 0, 0.63);
+}
+
+.prof {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+
+input[type="text"] {
+  font-size: 1rem;
 }
